force-app/main/default/objects/DeletedContact__c/DeletedContact__c.object-meta.xml
<CustomObject>
    <label>Deleted Contact</label>
    <nameField>
        <displayFormat>DM-{000000}</displayFormat>
        <label>Deleted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>