force-app/main/default/objects/DeletedContact__c/fields/DeletedContactId__c.field-meta.xml
<CustomField>
    <fullName>DeletedContactId__c</fullName>
    <label>DeletedContactId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>