force-app/main/default/objects/DeletedContact__c/fields/MergedContactId__c.field-meta.xml
<CustomField>
    <fullName>MergedContactId__c</fullName>
    <label>MergedContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>