force-app/main/default/objects/DeletedContact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OperatingCompany__c</columns>
    <columns>Type__c</columns>
    <columns>DeletedContactId__c</columns>
    <columns>MergedContactId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>